KQED -/src/objects/CC_Alias__c.object
<CustomObject>
    <fields>
        <fullName>AVSResult__c</fullName>
        <label>AVSResult</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC &amp; EFT Aliases</relationshipLabel>
        <relationshipName>CC_EFT_Aliases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AuthCode__c</fullName>
        <label>AuthCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Owner_Name__c</fullName>
        <label>Bank Account Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVVResult__c</fullName>
        <label>CVVResult</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Charge Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC &amp; EFT Aliases</relationshipLabel>
        <relationshipName>CC_Aliases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Four_Digits__c</fullName>
        <label>Last Four Digits</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <label>Merchant Account</label>
        <referenceTo>Merchant_Accounts__c</referenceTo>
        <relationshipLabel>CC &amp; EFT Aliases</relationshipLabel>
        <relationshipName>CC_EFT_Aliases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_ID__c</fullName>
        <label>Merchant ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Key__c</fullName>
        <label>Merchant Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTypeID__c</fullName>
        <label>PaymentTypeID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Description__c</fullName>
        <label>Payment Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_ID__c</fullName>
        <label>Payment ID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseCode__c</fullName>
        <label>ResponseCode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseIndicator__c</fullName>
        <label>ResponseIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseMessage__c</fullName>
        <label>ResponseMessage</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sage_Bank_Account_Type__c</fullName>
        <label>Sage Bank Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>DDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <label>TransactionID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VANReference__c</fullName>
        <label>VANReference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CC &amp; EFT Alias</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PaymentTypeID__c</columns>
        <columns>TransactionID__c</columns>
        <columns>Payment_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>GUID__c</columns>
        <columns>Card_Type__c</columns>
        <columns>Last_Four_Digits__c</columns>
        <columns>Account__c</columns>
        <columns>Card_Holder_Name__c</columns>
        <columns>Expire_Date__c</columns>
        <columns>Bank_Account_Owner_Name__c</columns>
        <columns>Bank_Account_Type__c</columns>
        <columns>Bank_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <groups>Sys Admin</groups>
            <groups>WGBH Audience &amp; Member Services</groups>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000000000}</displayFormat>
        <label>CC &amp; EFT Alias #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC &amp; EFT Aliases</pluralLabel>
    <recordTypes>
        <fullName>CC_Alias</fullName>
        <active>true</active>
        <label>CC Alias</label>
    </recordTypes>
    <recordTypes>
        <fullName>EFT_Alias</fullName>
        <active>true</active>
        <label>EFT Alias</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>